--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     <!-- start home page  -->
     <div class="home">
         <div class="container">
-            <h2 class="welcome-text"> شركة رأب للتطوير العقاري</h2>
             <div class="we" id="we" dir="rtl">
                 <div class="text-content">
+                    <h1 class="welcome-text"> شركة رأب للتطوير العقاري</h1>
                     <h2>من نحن</h2>
                     <p>تأسست شركة رأب للتطوير العقاري في 2022/9/22
                         فمنذ نشأتها، تطمح الشركة لتصبح واحدة من الشركات الرائدة
@@ -65,9 +65,6 @@
                 <div class="image">
                     <img src="imgs/Picture1.jpg" alt="">
                 </div>
-                <a href="#"> <lord-icon src="https://cdn.lordicon.com/wtfdpwey.json" trigger="loop"
-                        style="width:75px;height:75px">
-                    </lord-icon></a>
             </div>
         </div>
     </div>
@@ -77,7 +74,7 @@
         <div class="container">
             <div class="content">
                 <div class="text-content">
-                    <h2>مبادىء الشركة</h2>
+                    <h2 class="title">مبادىء الشركة</h2>
                     <ul>
                         تتميز الشركة بتطبيق المبادىء التالية:
                         <li>الأمانة و الشفافية</li>
@@ -93,12 +90,27 @@
             </div>
             <div class="content">
                 <div class="image">
-                    <img src="imgs/Picture2.jpg" alt="">
+                    <img src="imgs/Picture1.jpg" alt="">
                 </div>
                 <div class="text-content">
-                    <h2>أهدافنا</h2>
+                    <h2 class="title">أهدافنا</h2>
                     <p>نتطلع في شركة رأب للتطوير العقاري أن نكون
                         الشركة العقارية الرائدة في التطوير العقاري في المملكة</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="box">
+                    <h2 class="title">رؤيتنا</h2>
+                    <p> رؤيتنا في شركة رأب للتطوير العقاري علامة
+                        تجارية رائدة في مجال التطوير العقاري في المملكة.
+                    </p>
+                </div>
+                <div class="box">
+                    <h2 class="title">المسؤلية الاجتماعية</h2>
+                    <p>تلتزم شركة رأب للتطوير العقاري بالمسؤولية الإجتماعية، و تسعى الشركة من خلال مشاريعها
+                        إلى الاستمرار في كونها الوجهة الأولى لمستحقي الرعاية السكنية من المواطنين و ذلك من خلال
+                        تقديم مشاريع سكنية ذات جودة عالية و سعر و تصاميم عصرية تناسب الاسرة السعودية
+                    </p>
                 </div>
             </div>
         </div>
