--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="text-content">
                     <h1 class="welcome-text"> شركة رأب للتطوير العقاري</h1>
                     <h2>من نحن</h2>
-                    <p>تأسست شركة رأب للتطوير العقاري في 2022/9/22
+                    <p>تأسست شركة رأب للتطوير العقاري في <span>2022/9/22</span>
                         فمنذ نشأتها، تطمح الشركة لتصبح واحدة من الشركات الرائدة
                         في مجال التطوير العقاري في المملكة
                         ارتكزت منذ إنشائها على أساس راسخ من الخبرة الكبيرة التي يتمتع
