--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
                 <li class="nav-item">
                     <a onclick="closeNave()" href="#" class="nav-link">خدماتنا</a>
                 </li>
-
                 <li class="nav-item">
                     <a href="#" class="nav-link">تواصل معنا</a>
                 </li>
@@ -48,7 +47,7 @@
             <div class="we" id="we" dir="rtl">
                 <div class="text-content">
                     <h1 class="welcome-text"> شركة رأب للتطوير العقاري</h1>
-                    <h2>من نحن</h2>
+                    <h2 class="main-title">من نحن</h2>
                     <p>تأسست شركة رأب للتطوير العقاري في <span>2022/9/22</span>
                         فمنذ نشأتها، تطمح الشركة لتصبح واحدة من الشركات الرائدة
                         في مجال التطوير العقاري في المملكة
@@ -116,6 +115,45 @@
         </div>
     </div>
     <!-- end more-info section  -->
+    <!-- start services  -->
+    <div class="services" id="services" dir="rtl">
+        <div class="container">
+            <h2 class="main-title">خدماتنا</h2>
+            <div class="content">
+                <div class="item">
+                    <lord-icon src="https://cdn.lordicon.com/xxduqotz.json" trigger="loop"
+                        style="width:100px;height:100px">
+                    </lord-icon>
+                    <a href="#">التطوير العقاري</a>
+                </div>
+                <div class="item">
+                    <lord-icon src="https://cdn.lordicon.com/gqdnbnwt.json" trigger="loop"
+                        style="width:100px;height:100px">
+                    </lord-icon>
+                    <a href="#">ادارة الاصول العقارية</a>
+                </div>
+                <div class="item">
+                    <lord-icon src="https://cdn.lordicon.com/zpxybbhl.json" trigger="loop"
+                        style="width:100px;height:100px">
+                    </lord-icon>
+                    <a href="#">الوساطة العقارية</a>
+                </div>
+                <div class="item">
+                    <lord-icon src="https://cdn.lordicon.com/gmzxduhd.json" trigger="loop"
+                        style="width:100px;height:100px">
+                    </lord-icon>
+                    <a href="#">التشييد والبناء</a>
+                </div>
+                <div class="item">
+                    <lord-icon src="https://cdn.lordicon.com/gqzfzudq.json" trigger="loop"
+                        style="width:100px;height:100px">
+                    </lord-icon>
+                    <a href="#">التسويق العقاري</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end services  -->
     <script src="script.js"></script>
 </body>
 
