--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a onclick="closeNave()" href="#" class="nav-link">خدماتنا</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">تواصل معنا</a>
+                    <a onclick="closeNave()" href="#contact" class="nav-link">تواصل معنا</a>
                 </li>
             </ul>
         </div>
@@ -151,9 +151,166 @@
                     <a href="#">التسويق العقاري</a>
                 </div>
             </div>
+            <div class="main-content">
+                <div class="row">
+                    <div class="text-content">
+                        <h2>التطوير العقاري</h2>
+                        <p>تقدم شركة رأب للتطوير العقاري خدمات تطوير المشاريع
+                            العقارية، حيث نقوم بتطوير أو إعادة بناء العقارات القديمة
+                            و ذلك عبر خطط و دراسات يتم إجرارها بدقة و احترافية</p>
+                        <ul>
+                            <li>القيام بدراسة أفكار المشاريع المتاحة</li>
+                            <li>دراسة جدوى المشروع</li>
+                            <li>تنفيذ المشروع بدقة و كفاءة</li>
+                        </ul>
+                    </div>
+                    <div class="image">
+                        <img class="img" src="imgs/Picture4.png" alt="">
+                    </div>
+                </div>
+                <div class="row reverse">
+                    <div class="text-content">
+                        <h2>الوساطة العقارية</h2>
+                        <p>نقوم في الشركة بتقديم خدمات الوساطة العقارية بكفاءة عالية
+                            و تشمل هذه الخدمات بيع و شراء العقارات بالاضافة إلى التسويق
+                            العقاري، و ذلك تسهيلا لعملائنا الكرام</p>
+                        <ul>
+                            <li>خدمة العملاء الذين يرغبون في تملك او ايجار العقارات</li>
+                            <li>خبرة في تقديم الحلول للعملاء</li>
+                            <li>الاحترافية و السرعة في تنفيذ العمل</li>
+                        </ul>
+                    </div>
+                    <div class="image">
+                        <img class="img" src="imgs/Picture5.png" alt="">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="text-content">
+                        <h2>التسويق العقاري</h2>
+                        <p>يقدم فريق التسويق في شركة رأب للتطوير العقاري خدمات
+                            التسويق العقارية و الخطط التسويقية و الترويجية لعقاراتهم<br>
+                            <span>لماذا نحن ؟</span>
+                        </p>
+                        <ul>
+                            <li>خطط تسويق حديثة</li>
+                            <li>اختيار أفضل استراتيجيات التسويق</li>
+                            <li>حملات تسويقية حديثة</li>
+                            <li>زيادة المبيعات و الايرادات لمشروعك العقاري</li>
+                        </ul>
+                    </div>
+                    <div class="image">
+                        <img class="img" src="imgs/Picture6.png" alt="">
+                    </div>
+                </div>
+                <div class="row reverse">
+                    <div class="text-content">
+                        <h2>ادارة الاصول العقارية</h2>
+                        <p>تقوم شركة رأب للتطوير العقاري من خلال فريق مختص بإدارة
+                            الاصول العقارية التابعة لملاك العقار و ذلك بإحترافية و فعالية</p>
+                        <ul>
+                            <li>ادارة الممتلكات و المنشآت العقارية</li>
+                            <li>دراسة تكاليف و عوائد المشاريع العقارية</li>
+                            <li>وضع الخطط التسويقية و الترويجة المناسبة للعقار</li>
+                            <li>المراقبة و المتابعة و التقييم بهدف المحافظة على سلامة
+                                العقار</li>
+                        </ul>
+                    </div>
+                    <div class="image">
+                        <img class="img" src="imgs/Picture7.png" alt="">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="text-content">
+                        <h2>التشييد و البناء</h2>
+                        <p>تقوم شركة رأب للتطوير العقاري بتنفيذ مشاريع التشييد و البناء
+                            و ذلك من خلال فريق مختص ذو كفاءة عالية يقوم بتنفيذ الاعمال
+                            بمعايير الجودة و السلامة<br>
+                            <span>لماذا نحن ؟</span>
+                        </p>
+                        <ul>
+                            <li>التخطيط و خلق أفكار للمشاريع العقارية</li>
+                            <li>الالتزام بتحقيق أعلى جودة</li>
+                            <li>تنفيذ المشاريع من خلال العمالة ذو الكفاءة</li>
+                            <li>تسليم العمل في الوقت المحدد</li>
+                        </ul>
+                    </div>
+                    <div class="image">
+                        <img class="img" src="imgs/Picture8.png" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <!-- end services  -->
+    <!-- start footer  -->
+    <footer dir="rtl" id="#contact">
+        <div class="footer-top">
+            <div class="container">
+                <div class="footer-brand">
+                    <a href="#" class="logo">
+                        <img src="imgs/logo.png" alt="logo">
+                    </a>
+                    <p class="footer-text">
+                        زايا الرقمية من كبرى المؤسسات السعودية في مجال الخدمات وانشاء المتاجر الالكترونية والتصميم
+                        وتعليم التجارة الالكترونية والخدمات العامة بسجل تجاري رقم 5800108926
+                    </p>
+                    <ul class="social-list">
+                        <li>
+                            <a href="https://www.raab.com.sa" target="_blank" class="social-link">
+                                <i class="fa-solid fa-globe"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" target="_blank" class="social-link">
+                                <i class="fa-brands fa-twitter"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-link-box">
+                    <ul class="footer-list">
+                        <li>
+                            <p class="footer-item-title">خدماتنا</p>
+                        </li>
+                        <li>
+                            <a href="" target="_blank" class="footer-link">التطوير العقاري</a>
+                        </li>
+                        <li>
+                            <a href="" target="_blank" class="footer-link">الوساطة العقارية
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" target="_blank" class="footer-link">التسويق العقاري
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" target="_blank" class="footer-link">ادارة الاصول العقارية
+                            </a>
+                        </li>
+                        <li>
+                            <a href="" target="_blank" class="footer-link">التشييد و البناء
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="footer-list" id="contact">
+                        <li>
+                            <p class="footer-item-title">تواصل معنا</p>
+                        </li>
+                        <a href="https://twitter.com/raab_sa" target="_blank" class="footer-link"><i
+                                class="fa-brands fa-twitter"></i>twitter</a>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="container">
+                <p class="copyright">
+                    جميع الحقوق محفوظة 2022 &copy;
+                </p>
+            </div>
+        </div>
+    </footer>
+    <!-- end footer  -->
     <script src="script.js"></script>
 </body>
 
